Quote the substituted strings properly in the arguments given to the tools

Note that it is necessary to reset all the tools after this commit.

BUG: 314109